# fixcol

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  TODO.md  build.nu  rustfmt.toml
.github/workflows/: rust.yml
examples/: README.md
examples/habsburgs/: README.md  alg.rs  input.txt  main.rs
examples/habsburgs/expected_output/: stdout.txt
fixcol-derive/: Cargo.toml  README.md
fixcol-derive/src/: attrs.rs  enums.rs  error.rs  fields.rs  lib.rs  structs.rs
fixed-derive/: Cargo.toml
fixed-derive/src/: attrs.rs  enums.rs  error.rs  fields.rs  lib.rs  structs.rs
src/: error.rs  fixcol.rs  fixed.rs  format.rs  lib.rs  parse.rs  write.rs
tests/: examples.rs  test_derive_enum.rs  test_derive_nested.rs  test_derive_read.rs  test_derive_struct.rs  test_derive_tuple_struct.rs  test_enum_field.rs  test_multi_attr.rs  test_options.rs  test_strict.rs  test_write_failure.rs  ui.rs
tests/ui/: attr_bad_align.rs  attr_bad_align.stderr  attr_end_of_input.rs  attr_end_of_input.rs_  attr_end_of_input.stderr  attr_expected_assignment.rs  attr_expected_assignment.stderr  attr_expected_ident.rs  attr_expected_ident.stderr  attr_expected_sep.rs  attr_expected_sep.stderr  attr_expected_value.rs  attr_expected_value.stderr  attr_name_value.rs  attr_name_value.stderr  attr_path.rs  attr_path.stderr  attr_unrecognized_param.rs  attr_unrecognized_param.rs_  attr_unrecognized_param.stderr  embed_extra_attr.rs  embed_extra_attr.stderr  embed_multiple_fields.rs  embed_multiple_fields.stderr  embed_unreadable_inner.rs  embed_unreadable_inner.stderr  enum_bad_embed.rs  enum_bad_embed.stderr  enum_bad_param.rs  enum_bad_param.stderr  enum_ignore_others_type.rs  enum_ignore_others_type.stderr  enum_no_key_width.rs  enum_no_key_width.stderr  enum_var_no_key.rs  enum_var_no_key.stderr  missing_width.rs  missing_width.stderr  missing_width_inline.rs  missing_width_inline.stderr  (+4 more)
tests/ui/read-only/: embed_extra_attr.rs  embed_extra_attr.stderr  embed_multiple_fields.rs  embed_multiple_fields.stderr  embed_unreadable_inner.rs  embed_unreadable_inner.stderr  missing_width_inline.rs  missing_width_inline.stderr  without_write_feature.rs  without_write_feature.stderr
tests/ui/read-write/: embed_extra_attr.rs  embed_extra_attr.stderr  embed_multiple_fields.rs  embed_multiple_fields.stderr  embed_unreadable_inner.rs  embed_unreadable_inner.stderr  missing_width_inline.rs  missing_width_inline.stderr
