[package]
name = "fixcol"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["fixed", "column", "serialization", "parse", "file"]
categories = ["encoding", "parsing"]
homepage = "https://github.com/BrianLondon/fixcol"
repository = "https://github.com/BrianLondon/fixcol"
readme = "README.md"
description = "A library for reading and writing fixed width / column delimited data files."

[features]
experimental-write = []

[workspace]
members = ["fixcol-derive"]

[dependencies]
fixcol-derive = {path = "fixcol-derive"}

[dev-dependencies]
chrono = "0.4.38"
escargot = "0.5.12"
regex = "1.10.6"
tempfile = "3.12.0"
trybuild = "1.0.99"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "habsburgs"
path = "examples/habsburgs/main.rs"
required-features = ["experimental-write"]
