[package]
name = "fixcol"
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A library for reading and writing fixed width / column delimited data files."
edition = "2021"
keywords = ["fixed", "column", "serialization", "parse", "file"]
categories = ["encoding", "parsing"]
readme = "README.md"
documentation = "https://crates.io/crates/fixcol"
publish = true

[workspace]
members = ["fixcol-derive"]

[workspace.package]
version = "0.2.0"
license = "MIT"
homepage = "https://github.com/BrianLondon/fixcol"
repository = "https://github.com/BrianLondon/fixcol"

[features]
experimental-write = []

[lib]
doc-scrape-examples = false

[dependencies]
fixcol-derive = {path = "fixcol-derive", version = "0.2.0"}

[dev-dependencies]
chrono = "0.4.38"
escargot = "0.5.12"
regex = "1.10.6"
tempfile = "3.12.0"
trybuild = "1.0.99"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "habsburgs"
path = "examples/habsburgs/main.rs"
required-features = ["experimental-write"]
