[package]
name = "fixcol-derive"
version.workspace = true
description = "Proc Macro extensions for deriving fixcol traits"
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = true

edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.71", features = ["extra-traits"] }
